# co2-sensor

./: .gitignore  Cargo.toml  LICENSE  readme.md
.github/workflows/: test.yaml
backend/: Cargo.toml
backend/src/: device.rs  main.rs  server.rs  wire.rs
frontend/: .npmignore  package.json  readme.md  tsconfig.json
frontend/src/: app.test.tsx  app.tsx  calibrator.test.tsx  calibrator.tsx  co2_measure.test.tsx  co2_measure.tsx  index.css  index.html  index.tsx
frontend/src/mocks/: browser.ts
hardware/: case.stl  lid.stl  readme.md
src/: device.rs  lib.rs  main.rs  wire.rs
