[package]
name = "co2"
version = "0.1.0"
authors = ["Josh Kunz <josh@kunz.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.chrono]
version = "0.4"
# Disable the "oldtime" feature, which will be deprecated in the future.
# Unfortunately, the only way to do this is to disable all default features
# and then re-add the non-oldtime default features.
default-features = false
features = ["clock", "std"]
