[package]
name = "co2"
version = "0.1.0"
authors = ["Josh Kunz <josh@kunz.xyz>"]
edition = "2018"

[dependencies]
prometheus = "0.11"
governor = "0.3"
serde = "1"
serde_json = "1"
gotham = "0.6"
http = "0.2"
mime = "0.3"

[dependencies.serialport]
version = "4"
default-features = false

[dependencies.chrono]
version = "0.4"
# Disable the "oldtime" feature, which will be deprecated in the future.
# Unfortunately, the only way to do this is to disable all default features
# and then re-add the non-oldtime default features.
default-features = false
features = ["clock", "std"]
